<resources>
    <string name="app_name">Delicious Pizza</string>
    <string name="pizzaTypes">Pizza Types</string>
    <string name="radioButton2">select</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="radioButton3">select</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="next">Next</string>
    <string name="bbqChicken">BBQ Chicken</string>
    <string name="title3">Menu Size</string>
    <string name="bbqC">BBQ Chiken</string>
    <string name="smallBbq">small R30</string>
    <string name="mediumBbq">medium R40</string>
    <string name="largeBbq">large R50</string>
    <string name="hawaiianPizza">Hawaiian</string>
    <string name="smallHawaiian">small R35</string>
    <string name="mediumHawaiian">medium R45</string>
    <string name="largeHawaiian">large R55</string>
    <string name="pepperoniPizza">Pepperoni</string>
    <string name="smallPepperoni">small R38</string>
    <string name="mediumPepperoni">medium R48</string>
    <string name="largePepperoni">large R58</string>
    <string name="btnPay">Payment</string>
    <string name="radioBtn4">select</string>
    <string name="radioBtn5">select</string>
    <string name="radioBtn6">select</string>
    <string name="radioBtn7">select</string>
    <string name="radioBtn8">select</string>
    <string name="radioBtn9">select</string>
    <string name="radioBtn10">select</string>
    <string name="radioBtn11">select</string>
    <string name="radioBtn12">select</string>
    <string name="ok">OK</string>
    <string name="total">Total</string>
    <string name="radioButton1">select</string>
    <string name="amtEntry">Enter Amount</string>
    <string name="payBtn">pay</string>
    <string name="amount">amount</string>
    <string name="change">change</string>
    <string name="msg">message</string>
    <string name="text2">Input the amount</string>
    <string name="menueSize2">Menu Size</string>
    <string name="ok2">ok</string>
    <string name="total2">total</string>
    <string name="amountEntry2">amount</string>
    <string name="amount2">amount</string>
    <string name="pay2">pay</string>
    <string name="change2">change</string>
    <string name="msg2">message</string>
    <string name="menuSize3">Menu Size</string>
    <string name="radioButton13">select</string>
    <string name="radioButton14">select</string>
    <string name="radioButton15">select</string>
    <string name="okBtn3">ok</string>
    <string name="payBtn3">pay</string>
    <string name="total3">total</string>
    <string name="EditText3">number</string>
    <string name="change3">change</string>
    <string name="msg3">message</string>
    <string name="amount3">amount</string>
    <string name="editText3">number</string>

</resources>