<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".PizzaType">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pizzaTypes"
                android:textSize="40dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bbqChicken"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="129dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bbqImg"
                        android:layout_width="244dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/img_2" />

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="166dp"
                        android:layout_height="38dp"
                        android:text="@string/radioButton1" />

                </LinearLayout>

            </RadioGroup>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hawaiian"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/hawaiianImg"
                        android:layout_width="240dp"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/img_3" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="166dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="@string/radioButton2" />

                </LinearLayout>

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pepperoni"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pepperoniImg"
                        android:layout_width="240dp"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/img_4" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="166dp"
                        android:layout_height="90dp"
                        android:text="@string/radioButton3" />

                </LinearLayout>

            </RadioGroup>

            <Button
                android:id="@+id/next"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>